--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "narrator bot",
   "version": "1.0.0",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "serverless-http": "^2.6.0",
     "snoowrap": "^1.21.0"
   },
   "devDependencies": {
     "eslint": "^7.12.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.21.4",
-    "serverless-jest-plugin": "^0.3.0"
+    "serverless-jest-plugin": "^0.3.0",
+    "serverless-offline": "^6.8.0"
   }
 }
