--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "^7.12.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.21.4",
+    "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-jest-plugin": "^0.3.0",
     "serverless-offline": "^6.8.0"
   }
