--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 serverless.env.yml
+package-lock.json
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -44,6 +45,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
