--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "snoowrap": "^1.21.0"
   },
   "devDependencies": {
-    "eslint": "^7.12.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.21.4",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.1.0",
     "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-jest-plugin": "^0.3.0",
-    "serverless-offline": "^6.8.0"
+    "serverless-offline": "^6.8.0",
+    "serverless-webpack": "^5.3.5",
+    "standard": "^15.0.1",
+    "webpack": "^5.3.0"
   }
 }
